# api_requests_tests

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
common/: deco.py
fixtures/: app.py  constants.py  requests.py
fixtures/register/: api.py  model.py
tests/: test_register_new_user.py
